maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: '=' expected but '(' found.
def trouveSortie() : Tuple2(Int,Int) = {
                           ^JediEscaper:16: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^